# constellation-tech

./: .gitgnore  .gitignore  cloudbuild.yaml
.github/workflows/: deploy-pages.yml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Dockerfile  LICENSE  README.MD  README.md  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_full_pipeline.py  test_text_overlay.py
backend/exceptions/: __init__.py  cv_exceptions.py  image_exceptions.py  ocr_exceptions.py
backend/models/: schemas.py
backend/routers/: constellation.py  health.py
backend/services/: __init__.py  constellation_orchestrator.py  cv_parser.py  image_composer.py  image_generator.py  ocr_service.py  prompt_generator.py  star_detector.py  storage_service.py  tech_analyzer.py  technology_mapper.py  text_overlay_service.py  text_overlay_service_OLD.py  title_generator.py
backend/tests/: test_cv_parser.py  test_image_generator.py  test_ocr_service.py  test_prompt_generator.py  test_star_detector.py  test_tech_analyzer.py  test_title_generator.py
backend/tests/fixtures/: sample_cv.docx
backend/utils/: constellation_templates.py  tech_dictionary.py
frontend/: .gitignore  FRONTEND_BRIEF.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  config.js  index.html  particles.js  script.js  styles.css
frontend/assets/: ASSETS.md  GENERATE_FAVICONS.md  PLACEHOLDER-hero-bg.txt
